--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/R2 the Tie Fighter Fighter.loader.js";
+      var loaderUrl = buildUrl + "/R2 the Tie Fighter Fighter 02.loader.js";
       var config = {
-        dataUrl: buildUrl + "/R2 the Tie Fighter Fighter.data.gz",
-        frameworkUrl: buildUrl + "/R2 the Tie Fighter Fighter.framework.js.gz",
-        codeUrl: buildUrl + "/R2 the Tie Fighter Fighter.wasm.gz",
+        dataUrl: buildUrl + "/R2 the Tie Fighter Fighter 02.data.gz",
+        frameworkUrl: buildUrl + "/R2 the Tie Fighter Fighter 02.framework.js.gz",
+        codeUrl: buildUrl + "/R2 the Tie Fighter Fighter 02.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "2019-4-SNAPS-Base",
