--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/R2 the Tie Fighter Fighter 03.loader.js";
+      var loaderUrl = buildUrl + "/R2 the Tie Fighter Fighter 04.loader.js";
       var config = {
-        dataUrl: buildUrl + "/R2 the Tie Fighter Fighter 03.data.gz",
-        frameworkUrl: buildUrl + "/R2 the Tie Fighter Fighter 03.framework.js.gz",
-        codeUrl: buildUrl + "/R2 the Tie Fighter Fighter 03.wasm.gz",
+        dataUrl: buildUrl + "/R2 the Tie Fighter Fighter 04.data",
+        frameworkUrl: buildUrl + "/R2 the Tie Fighter Fighter 04.framework.js",
+        codeUrl: buildUrl + "/R2 the Tie Fighter Fighter 04.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "2019-4-SNAPS-Base",
